<resources>
    <string name="app_name">My Gel</string>

    <string name="salta">salta</string>
    <string name="stringawelcome1">Stringa 1</string>
    <string name="stringawelcome2">Stringa 2</string>
    <string name="stringawelcome3">Stringa 3\nsu due righe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accedi">Accedi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="entra">Entra</string>
    <string name="non_sei_registrato_registrati">Non sei registrato? Registrati</string>
    <string name="pwdimenticata">Password dimenticata?</string>
    <string name="addressbase">192.168.4.1/</string>
    <string name="chiedissid">hello</string>
    <string name="recuperapassword">recupera password</string>
    <string name="testorecuperapassword">Inserisci la tua email , ti invieremo un link in cui potrai effettuare il recupero della password</string>
    <string name="invia">invia</string>
    <string name="gosignin">Accedi</string>
    <string name="registrazione1">Registrazione 1 di 2</string>
    <string name="continua">continua</string>
    <string name="registrazione2">Registrazione 2 di 2</string>
    <string name="nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="citta">Città</string>
    <string name="registra">registrati</string>
    <string name="descrapp">Controlla i tuoi apparati Gel\ndovunque tu sia\nVers. 1.9</string>
    <string name="aggiungiprodotto">aggiungi prodotto</string>
    <string name="vedidettagli">gestisci</string>
    <string name="attivazione1">Aggiungi prodotto</string>
    <string name="attivazione2">Attivazione prodotto 2 di 3</string>
    <string name="attivazione3">Attivazione prodotto 3 di 3</string>
    <string name="attiva">attiva prodotto</string>
    <string name="connetti">connetti</string>
    <string name="associa">Associa</string>
    <string name="assegnanome">Assegna un nome</string>
    <string name="registradisp">registra</string>
    <string name="status">Status</string>
    <string name="impostazioni">Vai ad impostazioni wi-fi</string>

    <!-- REST/API ADDRESSES -->

    <string name="tokenapp">E0D95E577325872E7A50305F532354A43EAEEF37ADAF2CC6FCF47ACB393CB848</string>
    <string name="baseapi">https://my.gel.it/</string>
    <string name="signin">api/auth/signin</string>
    <string name="signup">api/auth/signup</string>
    <string name="forgot">api/auth/forgot</string>
    <string name="deviceslist">api/user/get-devices</string>
    <string name="joindevice">api/user/join-device</string>
    <string name="sendcmd">api/user/send-cmd-device</string>

    <string name="scheduledalert">api/user/get-alerts</string>
    <string name="getstatus">api/user/get-status</string>
    <string name="getgrafici">api/user/get-grafici</string>

    <!-- PROFILI -->
    <string name="profprivato">privato</string>
    <string name="progettista">Progettista</string>
    <string name="distributore">Distributore</string>
    <string name="cat_o_installatore">CAT o installatore</string>
    <string name="privato">Privato</string>
    <string name="registrazioneeffettuata">Registrazione effettuata</string>
    <string name="assegnanomedevice">\nScegli la tua rete a cui si deve \nconnettere il dispositivo \ned inserisci la password di accesso \nalla tua reteinternet</string>
    <string name="elencoreti">Elenco reti disponibili</string>
    <string name="identifica_la_tua_rete_internet">Identifica la tua rete internet</string>
    <string name="retescelta">NESSUNA RETE SCELTA</string>
    <string name="associazioneeffettuata">La tua app è stata associata al prodotto selezionato. Non appena il tuo prodotto inizierà la comunicazione con il server potrai controllarlo da questa App.</string>
    <string name="home">Home</string>
    <string name="comandi">In questa sezione potrai inviare direttamente i comandi al tuo apparato indipendentemente da dove ti trovi</string>
    <string name="aggiorna_firmware">Aggiorna firmware</string>
    <string name="riavvio">riavvio</string>
    <string name="disattiva_blocco_valvola">Disattiva blocco valvola</string>
    <string name="attiva_blocco_valvola">Attiva blocco valvola</string>
    <string name="comandi2">comandi</string>
    <string name="grafici">grafici</string>
    <string name="torna_a_status">Torna a status</string>
    <string name="f0">° Pulizia su cambio cartuccia</string>
    <string name="f1">° Blocco H2O utente</string>
    <string name="f2">° Allarme allagamento</string>
    <string name="f3">° Allarme no H2O</string>
    <string name="f4">° preallarme sostituzione membrana</string>
    <string name="f5">° preallarme sostituzione carbone</string>
    <string name="f6">° allarme sost. membrana + carbone</string>
    <string name="f7">° allarme sostituzione cartuccia</string>
    <string name="f8">° stato LED ultravioletti</string>
    <string name="default_notification_channel_id">gelmessage</string>
    <string name="allarmi">ALLARME</string>
    <string name="tornaindietro">Esci</string>

    <string name="location_permission_title">Permesso di geolocalizzazione</string>
    <string name="location_permission_message">Questa applicazione non usa la geolocalizzazione tuttavia è necessario concedere il permesso per connetersi ai dipositivi Gel.\nAttiva il permesso nel dispositivo  </string>

    <string name="location_denied_title">Permesso di geolocalizzazione negato</string>
    <string name="location_denied_message">Poichè il permesso di geolocalizzazione non è stato concesso, questa applicazione non è in grado di rilevare i dispositivi Gel</string>
    <string name="pairing_request">Accoppiamento richiesto\n-> Esegui accoppiamento e ritenta la connessione</string>
    <string name="seleziona_il_prodotto_da_aggiungere">Avvia la ricerca dei prodotti disponibili</string>
    <string name="avvia_ricerca">avvia ricerca</string>
    <string name="l_app_ha_bisogno_che_vengano_concessi_i_permessi_richiesti_per_poter_correttamente_connetersi_e_gestire_gli_apparati_gel">L\'app ha bisogno che vengano concessi i permessi richiesti per poter correttamente connetersi e gestire gli apparati GEL.</string>
    <string name="permessi">Permessi</string>
    <string name="scegli_questa_rete">scegli questa rete</string>
    <string name="inserisci_password_della_rete_scelta">Inserisci Password della rete scelta</string>
    <string name="invia_dati_al_dispositivo_gel">INVIA DATI AL DISPOSITIVO GEL</string>
    <string name="gel_enjoy_your_home_water">enjoy your home water</string>
    <string name="gel_la_comodit_e_la_sicurezza_di_avere_i_tuoi_dispositivi_sotto_controllo">La comodità e la sicurezza di avere i tuoi dispositivi sotto controllo</string>
    <string name="gel_sono_un_privato">Sono un privato</string>
    <string name="gel_voglio_conoscere_i_prodotti_gel_e_configurare_i_miei_nuovi_acquisti">Voglio conoscere i prodotti GEL e configurare i miei nuovi acquisti</string>
    <string name="gel_accedi">accedi</string>
    <string name="gel_sono_un_cat_o_un_installatore">Sono un CAT o un Installatore</string>
    <string name="gel_voglio_consultare_i_prodotti_gel_e_accedere_facilmente_alle_schede_prodotto">Voglio consultare i prodotti GEL e accedere facilmente alle schede prodotto</string>
    <string name="gel_sono_un_distributore">Sono un distributore</string>
    <string name="gel_voglio_consultare_i_prodotti_gel_e_scoprire_le_promozioni_in_corso">Voglio consultare i prodotti GEL e scoprire le promozioni in corso</string>
    <string name="gel_sono_un_progettista">Sono un progettista</string>
    <string name="voglio_consultare_i_prodotti_gel_e_congel_figurare_facilmente_un_nuovo_impianto_idrico">Voglio consultare i prodotti GEL e configurare facilmente un nuovo impianto idrico</string>
    <string name="gel_telefono_cellulare">Telefono cellulare</string>
    <string name="password2">Ripeti password*</string>
    <string name="gel_campi_obbligatori">*CAMPI OBBLIGATORI</string>
    <string name="gel_controlla_la_tua_email">controlla la tua email</string>
    <string name="gel_abbiamo_inviato_via_email_un_codice_per_l_autenticazione_copia_il_codice_e_inseriscilo_qui_sotto">Abbiamo inviato via email un codice per l’autenticazione. \nCopia il codice e inseriscilo qui sotto.</string>
    <string name="gel_verifica">VERIFICA</string>
    <string name="gel_homemenu">Home</string>
    <string name="gel_aggiungi_nuovo_prodottomenu">Aggiungi nuovo prodotto</string>
    <string name="gel_sfoglia_guidacquamenu">Sfoglia Guidacqua</string>
    <string name="gel_guarda_i_videotutorialmenu">Guarda i videotutorial</string>
    <string name="gel_vai_ai_dispositivi_connessimenu">Vai ai dispositivi connessi</string>
    <string name="gel_i_miei_datimenu">I miei dati</string>
    <string name="menuopen">open</string>
    <string name="menuclose">close</string>
    <string name="gel_ciaotesto">per effettuare la connessione alla rete wi-fi del tuo nuovo dispositivo prima di premere su CONNETTI NUOVO PRODOTTO, attiva il bluetooth e il WiFi sul telefono, scollega e ricollega la presa del dispositivo dalla corrente e completa la procedura entro 5 minuti</string>
    <string name="gel_ciao">Ciao</string>
    <string name="gel_rivista">i prodotti Gel, sfoglia il catalogo guidacqua</string>
    <string name="gel_seleziona_il_prodotto_da_connettere_in_3_semplici_step">Seleziona il prodotto da connettere in 3 semplici step</string>
    <string name="seleziona_il_prodotto_ntra_quelli_trovati">SELEZIONA IL PRODOTTO \nTRA QUELLI TROVATI</string>
    <string name="seleziona_rete_wifi_2_3">SELEZIONA RETE WIFI (2/3)</string>
    <string name="vai_ai_video_tutorial">VAI AI VIDEO TUTORIAL</string>
    <string name="acquaclick_4_0">AcquaClick 4.0</string>

</resources>