<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AccediFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrazione1" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollablespace">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="10sp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="Seleziona il tuo profilo"
                android:layout_marginBottom="20sp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/privato"/>

                <RadioButton
                    android:textColor="@color/button"
                    android:textStyle="bold"
                    android:enabled="false"
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cat_o_installatore"/>
                <RadioButton
                    android:textColor="@color/button"
                    android:textStyle="bold"
                    android:enabled="false"
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/distributore"/>
                <RadioButton
                    android:textColor="@color/button"
                    android:textStyle="bold"
                    android:enabled="false"
                    android:id="@+id/radio_button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/progettista"/>
            </RadioGroup>





            <com.google.android.material.button.MaterialButton
                android:id="@+id/scegli"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/continua"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>