<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MyGel"
    android:orientation="vertical"
    tools:context=".fragments.AccediFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_marginTop="16sp"
        android:layout_margin="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comandi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollablespace">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/attivablocco"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/attiva_blocco_valvola"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/disattivablocco"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/disattiva_blocco_valvola"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/riavvio"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/riavvio"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/aggiorna"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/aggiorna_firmware"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/black"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>