<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AccediFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="22sp"
        android:background="@color/white"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_marginTop="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accedi" />

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:id="@+id/scrollablespace">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@color/white"
            android:orientation="vertical">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20sp"
                android:id="@+id/outlinedTextField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="#99000000"
                app:boxStrokeColor="@color/button"
                app:hintTextAppearance="@style/HintTextAppearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:id="@+id/email"
                    android:text=""
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:id="@+id/outlinedTextField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#99000000"
                app:boxStrokeColor="@color/button"
                app:hintTextAppearance="@style/HintTextAppearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:text=""
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pwdimenticata"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/pwdimenticata"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accedi"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_above="@+id/registratiskip"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/entra"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />

            <RelativeLayout
                android:id="@+id/registratiskip"
                android:layout_marginBottom="20sp"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/registrati"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:text="@string/non_sei_registrato_registrati"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>