<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AccediFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assegnanome" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollablespace">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="10sp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:backgroundTint="#d7dfe4"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="\nAssegna un nome \nal tuo dispositivo \ne premi il pulsante REGISTRA\n"
                android:layout_marginBottom="20sp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:id="@+id/outlinedTextField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:textColorHint="#99000000"
                app:boxStrokeColor="@color/button"
                app:hintTextAppearance="@style/HintTextAppearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:id="@+id/nomedisp"
                    android:inputType="text"

                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/accedi"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_above="@+id/registratiskip"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/button"
                android:text="@string/registradisp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="4sp" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>